adding alternate theme

--- a/inline/different.html
+++ b/inline/different.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="normal.css">
+    <link rel="stylesheet" href="different.css">
     <link rel="stylesheet" href="inline.css">
     <title>Block vs Inline</title>
 </head>
@@ -17,7 +17,7 @@
 <body>
     <div class="main">
         <h1>Block vs Inline</h1>
-        <button href="different.html">Change Colours</button>
+        <button>Change Colours</button>
         <div class="container">
             <h2>Block</h2>
             <div class="block">
