--- a/inline/different.html
+++ b/inline/different.html
@@ -17,7 +17,7 @@
 <body>
     <div class="main">
         <h1>Block vs Inline</h1>
-        <button>Change Colours</button>
+        <a class="button" href="index.html">Change Colours</a>
         <div class="container">
             <h2>Block</h2>
             <div class="block">
